<resources>
    <string name="app_name">My Application</string>
    <string name="main_title">Main</string>
    <string name="text_view_date">Date</string>
    <string name="text_view_bmi">BMI</string>
    <string name="text_view_weight_change">Weight Change</string>
    <string name="text_view_weight">Weight</string>
    <string name="text_view_distance">Distance</string>
    <string name="text_view_no_text"></string>
    <string name="text_view_timeWalked">Time Walked (in Minutes)</string>
    <string name="main_button_archive">Archive</string>
    <string name="main_button_new_record">New Record</string>
    <string name="main_button_settings">Settings</string>

    <string name="settings_title">Settings</string>
    <string name="text_view_set_switch">Metric or Imperial</string>
    <string name="text_view_switch_results">Overwritten</string>
    <string name="text_view_set_height">Height</string>
    <string name="button_home">Home</string>

    <string name="archive_title">Archive</string>

    <string name="new_record_title">New Record</string>
    <string name="button_new_record_save">Next</string>

    <string name="activities_title">Activities</string>
    <string name="button_done_workouts">Done</string>
    <string name="text_view_half_hour">30 mins</string>
    <string name="text_view_one_hour">1 hr</string>
    <string name="text_view_one_half_hours">1 hr 30 mins</string>
    <string name="text_view_two_hours">2 hs</string>
    <string name="text_view_cycling">Cycling</string>
    <string name="text_view_running">Running</string>
    <string name="text_view_swimming">Swimming</string>
    <string name="text_view_walking">walking</string>
    <string name="text_view_weights">Weights</string>
    <string name="text_view_yoga">Yoga</string>

    <string name="confirmation_title">Confirmation</string>
    <string name="confirmation_bmi">BMI</string>
    <string name="confirmation_show_bmi">Show BMI</string>
    <string name="confirmation_button_save">Save</string>

</resources>