<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewRecordActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/new_record_title"
        android:textSize="@dimen/main_title_dimens"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_marginLeft="150px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15px"
            android:text="@string/text_view_weight"
            android:textSize="8sp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/weight"
            android:layout_marginLeft="140px"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:paddingTop="15px"
            android:singleLine="true"
            android:inputType="date"
            />

    </LinearLayout>

    <!--divide BMI-->

    <LinearLayout
        android:layout_marginTop="15px"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_marginLeft="150px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15px"
            android:text="@string/text_view_timeWalked"
            android:textSize="8sp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/timeWalked"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140px"
            android:inputType="none|date"
            android:paddingTop="15px"
            android:singleLine="true" />

    </LinearLayout>


    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_new_record_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />


</LinearLayout>